force-app/main/default/objects/Idea/fields/Account_Vote_Limit__c.field-meta.xml
<CustomField>
    <fullName>Account_Vote_Limit__c</fullName>
    <description>7S Ideas Account voting limit</description>
    <inlineHelpText>A value of 0 (zero) means that there is no limit on Account votes for this Ideas. A blank value means that there is no Idea-specific limit on account votes, but that a limit may still apply (it may be account-specific or across all accounts).</inlineHelpText>
    <label>Account Vote Limit</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>