force-app/main/default/objects/Idea/fields/Featured__c.field-meta.xml
<CustomField>
    <fullName>Featured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>7S Ideas featured idea</description>
    <inlineHelpText>Select to display as a featured Idea</inlineHelpText>
    <label>Featured</label>
    <type>Checkbox</type>
</CustomField>