force-app/main/default/objects/Idea/fields/Idea_Extension_Status__c.field-meta.xml
<CustomField>
    <fullName>Idea_Extension_Status__c</fullName>
    <description>7S Ideas Extension status</description>
    <label>Idea Extension Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Linked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>