force-app/main/default/objects/Idea/fields/Jira_ID__c.field-meta.xml
<CustomField>
    <fullName>Jira_ID__c</fullName>
    <description>ID for corresponding jira.</description>
    <label>Jira ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>