force-app/main/default/objects/Idea/fields/Jira_Link__c.field-meta.xml
<CustomField>
    <fullName>Jira_Link__c</fullName>
    <description>Corresponding Jira Link for this idea.</description>
    <label>Jira Link</label>
    <type>Url</type>
</CustomField>