force-app/main/default/objects/Idea/fields/Related_Topic_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Topic_Name__c</fullName>
    <description>7S Ideas related topic name</description>
    <label>Related Topic Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>