force-app/main/default/objects/Idea/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Displays User who created idea from Question</description>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Ideas</relationshipName>
    <type>Lookup</type>
</CustomField>