force-app/main/default/objects/Idea/fields/Status_Comment__c.field-meta.xml
<CustomField>
    <fullName>Status_Comment__c</fullName>
    <description>This field add comments on status change.</description>
    <label>Status Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>