force-app/main/default/objects/Idea/fields/Status_Summary__c.field-meta.xml
<CustomField>
    <fullName>Status_Summary__c</fullName>
    <description>7S Ideas status summary</description>
    <label>Status Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>