force-app/main/default/objects/Idea/fields/X7S_Ideas_Extension__c.field-meta.xml
<CustomField>
    <fullName>X7S_Ideas_Extension__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>7S Ideas related extension object</description>
    <label>7S Ideas Extension</label>
    <referenceTo>X7S_Ideas_Extension__c</referenceTo>
    <relationshipLabel>Ideas</relationshipLabel>
    <relationshipName>Ideas</relationshipName>
    <type>Lookup</type>
</CustomField>