force-app/main/default/objects/Idea/recordTypes/Record_type_for_community_09a1E000000Gz19QAC_entity_Idea.recordType-meta.xml
<RecordType>
    <fullName>Record_type_for_community_09a1E000000Gz19QAC_entity_Idea</fullName>
    <active>true</active>
    <description>Record type used to associate Idea with a specific zone</description>
    <label>The Hive: Idea Record Type</label>
</RecordType>