force-app/main/default/objects/Idea/recordTypes/Record_type_for_community_09a800000005NFqAAM_entity_Idea.recordType-meta.xml
<RecordType>
    <fullName>Record_type_for_community_09a800000005NFqAAM_entity_Idea</fullName>
    <active>true</active>
    <description>Record type used to associate Idea with a specific zone</description>
    <label>7S Support Community: Idea Record Type</label>
</RecordType>